fix styles on homepage and fix z index on mobile navbar

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer utilities {
+  .page-styles {
+    @apply flex h-screen w-screen justify-center px-6 pt-[7.65rem] sm:pt-[8.25rem];
+  }
+
   .flex-center {
     @apply flex items-center justify-center;
   }
